fixed overlaping exit button.

--- a/client/styles/latestReviews.module.css
+++ b/client/styles/latestReviews.module.css
@@ -40,4 +40,7 @@ img {
   max-height: 56px;
   max-width: 56px;
   min-height: 1px;
+  /* display: block;
+  margin-left: auto;
+  margin-right: auto; */
 }
