--- a/client/styles/reviewsModal.module.css
+++ b/client/styles/reviewsModal.module.css
@@ -6,9 +6,9 @@
   padding: 40px 40px 40px 40px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -18,9 +18,9 @@
   margin: auto;
   padding: 24px 24px 24px 24px;
   border: 1px solid #888;
-  width: 80%;
+  width: 70%;
   height: 80%;
-  border-radius: 25px;
+  border-radius: 10px;
   overflow-y: auto;
   align-items: center !important;
 }
@@ -28,7 +28,7 @@
 .wrapper {
   display: grid;
   grid-template-columns: 37% auto;
-  grid-template-rows: 25px 50px auto;
+  grid-template-rows: 30px 50px auto;
   min-height: 475px;
   min-width: 744px;
 }
@@ -36,24 +36,34 @@
 .closeBtn {
   grid-column: 1 / 3;
   grid-row:1 / 2;
-  /* padding-top: 24px; */
-}
-.close {
-  font-size: 28px;
-  line-height: 1.43;
-  color: #484848;
+  font-size: 24px;
+  text-align: center;
+  font-weight: 400;
+  color: #000000;
+  background-color: Transparent;
+  border-radius: 50%;
   outline:none;
+  box-shadow: none;
+  width: 24px;
+  height: 24px;
 }
-.close:hover,
-.close:focus {
+.closeBtn:hover,
+.closeBtn:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.036);
 }
 /* overview  and serach bar */
 .heading {
   grid-column: 1 / 3;
   grid-row: 2 / 3;
+}
+.heading {
+  font-size: 32px;
+  line-height: 36px;
+  font-weight: 800;
+  color:#222222;
 }
 /* section for review overview nested grid */
 .overview {
